[viessmann] Add new gateway and account thing
Signed-off-by: Ronny Grun <ronny.grun@t-online.de>